test/neg/test3.smt2_
; Uninterpreted Sorts


; Uninterpreted Functions


; Qualifiers
(qualif Zog ((v @a1)(z @a0)) (= v z))


; Well-formedness constraints
(wf $k0 ((x Int)(v Int)))


; Horn constraints
(constraint (forall ((q Int)(v1 Int)) (=> (and True (= v1 q)) ($k0 q v1))))
(constraint (forall ((y Int)(v2 Int)) (=> (and (= y 42) ($k0 y v2)) (= v2 10))))
